--- a/tox.ini
+++ b/tox.ini
@@ -1,55 +1,49 @@
 [tox]
-envlist =
-    py26-1.4, py26-1.5, py26-1.6,
-    py27-1.4, py27-1.5, py27-1.6
+envlist = py{26,27}-django{1.4,1.5,1.6}
 
 [default]
-# sudo apt-get install python2.6-dev python2.7-dev libxml2-dev libxslt1-dev
-deps =
-    lxml==3.2.3
-    pytz==2014.7
-    Markdown==2.3.1
-    docutils==0.11
-    template-utils==0.4p2
 
 [testenv]
-commands = {envpython} {envbindir}/django-admin.py test postoffice
+# sudo apt-get install python2.6-dev python2.7-dev libxml2-dev libxslt1-dev
+basepython =
+    py26: python2.6
+    py27: python2.7
+    py35: python3.5
+    py36: python3.6
+    py37: python3.7
+    py38: python3.8
+deps =
+    pytz
+    lxml
+    Markdown
+    docutils
+    template-utils==0.4p2
+    django1.4: django<1.5
+    django1.5: django<1.6
+    django1.6: django<1.7
+    django1.7: django<1.8
+    django1.8: django<1.9
+    django1.9: django<1.10
+    django1.10: django<1.11
+    django1.11: django<1.12
+    django2.0: django<2.1
+    django2.1: django<2.2
+    django2.2: django<2.3
 setenv =
     PYTHONPATH={toxinidir}
     DJANGO_SETTINGS_MODULE=sample_project.settings
+commands = {envpython} {envbindir}/django-admin.py test postoffice
 
-[testenv:py26-1.4]
-basepython = python2.6
-deps =
-    django>=1.4,< 1.5
-    {[default]deps}
-
-[testenv:py26-1.5]
-basepython = python2.6
-deps =
-    django>=1.5,<1.6
-    {[default]deps}
-
-[testenv:py26-1.6]
-basepython = python2.6
-deps =
-    django>=1.6,<1.7
-    {[default]deps}
-
-[testenv:py27-1.4]
-basepython = python2.7
-deps =
-    django>=1.4,<1.5
-    {[default]deps}
-
-[testenv:py27-1.5]
-basepython = python2.7
-deps =
-    django>=1.5,<1.6
-    {[default]deps}
-
-[testenv:py27-1.6]
-basepython = python2.7
-deps =
-    django>=1.6,<1.7
-    {[default]deps}
+[travis:env]
+DJANGO =
+  1.4: django1.4
+  1.5: django1.5
+  1.6: django1.6
+  1.7: django1.7
+  1.8: django1.8
+  1.9: django1.9
+  1.10: django1.10
+  1.11: django1.11
+  2.0: django2.0
+  2.1: django2.1
+  2.2: django2.2
