Drop support for Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-envlist = py{26,27}-django{1.4,1.5,1.6}
+envlist = py27-django{1.4,1.5,1.6}
 
 [default]
 
 [testenv]
 # sudo apt-get install python2.6-dev python2.7-dev libxml2-dev libxslt1-dev
 basepython =
-    py26: python2.6
     py27: python2.7
     py35: python3.5
     py36: python3.6
